--- a/EXTLex/nbproject/project.properties
+++ b/EXTLex/nbproject/project.properties
@@ -20,9 +20,11 @@ debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Os arquivos em build.classes.dir que devem ser exclu\u00eddos do jar de distribui\u00e7\u00e3o
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/LexicalAnalyzer.jar
+dist.jar=${dist.dir}/EXTLex.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -51,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lexicalanalyzer.Main
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
