Added tutorial, corrected code.

--- a/EXTLex/nbproject/private/private.properties
+++ b/EXTLex/nbproject/private/private.properties
@@ -1,2 +1,8 @@
+application.args="./example/automata.txt" "./example/reserved.txt" "./example/code.txt"
 compile.on.save=true
+do.depend=true
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\GustavoH\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+work.dir=C:\\GHPaetzold\\OneDrive\\Ciencia da Computacao\\Artigos\\EPAC 2013 Elder\\Experimentos\\EXTLex\\LexicalAnalyzer\\EXTLex
